typo (header): Dari KEDINASNAN yang seharusnya KEDINASAN

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
         return (
           <div>
-            <Partials.Header text="YUK CEK SEKOLAH KEDINASNAN MANA YANG TEPAT UNTUK KAMU" />
+            <Partials.Header text="YUK CEK SEKOLAH KEDINASAN MANA YANG TEPAT UNTUK KAMU" />
             <p>Tentukan Sekolah Kedinasan mu secara tepat dengan software rekomendasi ini !!!</p>
 
             <Partials.SelectInput label="Pilihan Sekolah" options={options} onChange={onChange} selected={selected} />
