doc (Pilihan Sekolah): Merubah text header

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
         return (
           <div>
-            <Partials.Header text="YUK CEK SEKOLAH APAKAH KAMU BUTA WARNA?" />
+            <Partials.Header text="APAKAH KAMU BUTA WARNA?" />
 
             <Partials.SelectInput label="Pilihan Sekolah" options={options} onChange={onChange} selected={selected} />
 
