--- a/index.html
+++ b/index.html
@@ -1862,6 +1862,7 @@
               className="mt-4 mb-4 p-4 container card overflow-auto"
               id="content"
             >
+              {/* HOME */}
               {activePage === "home" && <Pages.Home showPage={showPage} />}
               {activePage === "cek-kedinasan-sekolah" && (
                 <Pages.CekKedinasanSekolah
@@ -1888,6 +1889,7 @@
                 />
               )}
 
+              {/* HASIL */}
               {activePage === "hasil" && (
                 <Pages.Hasil
                   showPage={showPage}
@@ -1897,6 +1899,7 @@
                 />
               )}
 
+              {/* HALAMAN CEK */}
               {activePage === "cek-ipdn" && (
                 <Pages.Cek.IPDN showPage={showPage} />
               )}
@@ -1922,6 +1925,7 @@
                 <Pages.Cek.STIN showPage={showPage} />
               )}
 
+              {/* HALAMAN INFORMASI */}
               {activePage === "ipdn" && (
                 <Pages.Informasi.IPDN showPage={showPage} />
               )}
