text (CekKedinasanSekolah): Update text

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <div>
               <Partials.Header text="YUK CEK SEKOLAH KEDINASAN MANA YANG TEPAT UNTUK KAMU" />
               <p>
-                Tentukan Sekolah Kedinasan mu secara tepat dengan software
+                Pilih kategori Sekolah Menengah Mu secara tepat dengan software
                 rekomendasi ini !!!
               </p>
 
