--- a/index.html
+++ b/index.html
@@ -1500,11 +1500,9 @@
                     <div className="row">
                       <div className="col-sm-4">
                         <button
-                          type="button"
                           className="btn btn-danger"
-                          disabled
                         >
-                          Alert!!!
+                          Peringatan!!!
                         </button>
                       </div>
 
@@ -1566,7 +1564,7 @@
                           href="https://panaracourse.web.id/layanan"
                           className="btn btn-info"
                         >
-                          https://panaracourse.web.id/layanan
+                          panaracourse.web.id/layanan
                         </a>
                       </li>
                     </ul>
