--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     ></script>
   </head>
 
-  <body>
+  <body oncontextmenu="return false">
     <div id="root"></div>
 
     <script type="text/babel">
