Merubah pada margin

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
       #content {
         max-width: 95%;
+        margin-top: 2%;
+        margin-bottom: 15%;
       }
 
       .btn {
@@ -1856,7 +1858,7 @@
         return (
           <React.Fragment>
             <div
-              className="mt-4 mb-4 p-4 container card overflow-auto"
+              className="p-2 container card overflow-auto"
               id="content"
             >
               {/* HOME */}
