--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
       * {
         -webkit-user-select: none;
-        -khtml-user-select: none;
+        -html-user-select: none;
         -moz-user-select: none;
         -o-user-select: none;
         user-select: none;
@@ -590,8 +590,8 @@
               let result = true;
               const blindEye = ["Tidak Minus"];
 
-              result &= "Tidak Buta Warna" === butaWarna ? true : false;
-              result &= blindEye.includes(minus) ? true : false;
+              result &= "Tidak Buta Warna" === butaWarna;
+              result &= blindEye.includes(minus);
 
               return result;
             }
